# configs-files

./: .gitconfig  .gitignore  .zshrc  Brewfile  CLAUDE.md  JUSTFILE_USAGE.md  README.md  dev.nu  devbox.json  init.nu  init.sh  justfile  starship.toml
.config/brew/: Brewfile
.config/git/: .gitconfig
.config/zsh/: .zshenv  .zshrc
brew/: Brewfile  data.json
claude/.claude/: CLAUDE.md  settings.json
cli/: Cargo.toml  README.md
cli/src/: database.rs  main.rs
cluster-manager/: package-lock.json  package.json
cluster-manager/src/: App.tsx  types.ts
clusters/local/: cluster.yaml
clusters/production/: cluster.yaml
crossplane/: configuration.yaml
database/: docker-compose.yml
devbox/: devbox.json
kcl/: README.md  base.k  kcl.mod  main.k  test.k  yaml
scripts/: app-management-test.nu  app-management.nu  cloud-providers.nu  cluster-setup.nu  database-management.nu  demo-kcl.nu  demo-usage.sh  flux-deps.nu  generate-docs.nu  generate-shell-configs.nu  infrastructure-setup.nu  init.sh  justfile  kc-cluster.nu  local.nu  loki-manifests.yaml  nu-with-functions.sh  nx.nu  package-lock.json  package.json  polars-data-manager.nu  promtail-manifests.yaml  rust-manager-integration.nu  send-slack-notification.nu  setup-nu.sh  setup-shells.nu  start-tracer.sh  state-machine-integration.nu  test-complete-integration.nu  test-e2e.sh  test-kcl-integration.nu  test-nu-functions.nu  trace-server.js
shells/: config.toml
tests/: README.md  integration-tests.nu  run_all_tests.nu
zed/: omg.yaml  settings.json
zsh/: .zshenv  .zshrc  functions.zsh
(+70 files in other folders)
