[package]
name = "cluster-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for managing clusters and executing Nu scripts"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
colored = "3.0"
indicatif = "0.17"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], optional = true }
rust_decimal = { version = "1.0", features = ["serde"] }
influxdb2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["trace"] }
opentelemetry-jaeger = { version = "0.22", features = ["rt-tokio"] }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
serial_test = "3.0"

[features]
default = []
database = ["sqlx"]
